Tried adding the getMovieData function first

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
         </span>
     </div>
 
+    <br>
+    <button class="btn btn-primary refreshBtn"> Refresh </button>
 
     <br><br>
     <p class="displayMovieName"></p>
