added movie api

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
+                    <div id="posters"></div>
+                    <button id="findPoster" class="btn btn-secondary">Find Poster</button>
                     <button class=" btn btn-primary addMovieBtn" id="addMovieBtn ">Submit</button>
                  </div>
             </div>
